--- a/formatingtags.html
+++ b/formatingtags.html
@@ -17,7 +17,7 @@
     <br>
     <del>indicates deleted text with a strikethrough</del>
     <br>
-    <mark>highlights text with a yellow background</mark>
+    <mark>highlights text with a yellow colour background</mark>
     <br>
     <strike>also shows strikethrough(though deprecated in favor of<del> )</strike>
     <br>
