--- a/formatingtagss.html
+++ b/formatingtagss.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <ul type = "dic"></ul>
+    <ul type = "circle"></ul>
+    <ul type = "square"> </ul>
+    
     <header>
         <h1>Welcome to Website</h1>
         <nav>
@@ -46,6 +50,6 @@
        <li><a href="Terms of service">Terms of service></a></li>
         </ul>
     </footer>
-    
+   
 </body>
 </html>
