--- a/formatingtagss.html
+++ b/formatingtagss.html
@@ -6,9 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <ul type = "dic"></ul>
-    <ul type = "circle"></ul>
-    <ul type = "square"> </ul>
+    <ul type = "dic">
+        <li>a</li>
+        <li>b</li>
+        <li>c</li>
+    </ul>
+    <ul type = "circle">
+        <li>a</li>
+        <li>b</li>
+        <li>c</li>
+    </ul>
+    <ul type = "square">
+        <li>a</li>
+        <li>b</li>
+        <li>c</li> </ul>
     
     <header>
         <h1>Welcome to Website</h1>
